[package]
name = "core"
version = "1.0.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
anyhow           = { workspace = true }
async-trait      = { workspace = true }
chrono           = { workspace = true }
entity           = { workspace = true }
futures          = { workspace = true }
migration        = { workspace = true }
harmonia-protocol     = { workspace = true }
harmonia-store-core   = { workspace = true }
harmonia-store-remote = { workspace = true }
harmonia-utils-hash  = { workspace = true }
nix-bindings     = { workspace = true }
rand             = { workspace = true }
sea-orm          = { workspace = true }
sea-orm-migration = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true, features = ["process"] }
tracing          = { workspace = true }
sha2             = { workspace = true }
uuid             = { workspace = true }

hmac             = { workspace = true }
reqwest          = { workspace = true }

# Crate-specific dependencies
async-ssh2-lite  = { version = "0.5", features = ["tokio"] }
base64           = "0.22"
git2             = { workspace = true }
clap             = { version = "4.6", features = ["derive", "env"] }
crypter          = { version = "0.3", features = ["argon"] }
ed25519-compact  = { version = "2.2", features = ["random"] }
git-url-parse    = "0.6"
hex              = "0.4"
lettre           = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
password-auth    = "1.0"
rand_core        = "0.9"
ssh-key          = { version = "0.6", features = ["ed25519"] }
object_store     = { workspace = true }
tempfile         = "3.27"

[dev-dependencies]
mockall      = { workspace = true }
test-support = { workspace = true }
tokio-test   = { workspace = true }
