[package]
name        = "core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[lib]
name    = "core"
path    = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
# Internal
entity    = { workspace = true }
migration = { workspace = true }

# Workspace
anyhow                = { workspace = true }
async-trait           = { workspace = true }
base64                = { workspace = true }
chrono                = { workspace = true }
clap                  = { workspace = true }
futures               = { workspace = true }
git-url-parse         = { workspace = true }
git2                  = { workspace = true }
harmonia-nar          = { workspace = true }
harmonia-protocol     = { workspace = true }
harmonia-store-core   = { workspace = true }
harmonia-store-remote = { workspace = true }
harmonia-utils-hash   = { workspace = true }
hex                   = { workspace = true }
hmac                  = { workspace = true }
libc                  = { workspace = true }
nix-bindings          = { workspace = true }
object_store          = { workspace = true }
rand                  = { workspace = true }
reqwest               = { workspace = true }
ring                  = { workspace = true }
rkyv                  = { workspace = true }
sea-orm               = { workspace = true }
sea-orm-migration     = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
sha2                  = { workspace = true }
tempfile              = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true, features = ["process", "macros", "fs", "io-util"] }
tokio-util            = { workspace = true, features = ["rt", "io"] }
tracing               = { workspace = true }
url                   = { workspace = true }
uuid                  = { workspace = true }
zstd                  = { workspace = true }

# Crate-specific (no workspace counterpart yet)
async-compression = { version = "0.4", default-features = false, features = ["tokio", "zstd"] }
async-ssh2-lite   = { version = "0.5", default-features = false, features = ["tokio"] }
crypter           = { version = "0.3", default-features = false, features = ["argon"] }
ed25519-compact   = { version = "2.2", default-features = false, features = ["random"] }
lettre            = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
password-auth     = { workspace = true }
rand_core         = { version = "0.10", default-features = false }
ssh-key           = { version = "0.6", features = ["ed25519"] }
tar               = { version = "0.4", default-features = false }

[dev-dependencies]
bytes        = { workspace = true }
harmonia-nar = { workspace = true, features = ["test"] }
mockall      = { workspace = true }
test-support = { workspace = true }
tokio-test   = { workspace = true }
wiremock     = { version = "0.6", default-features = false }
zstd         = { workspace = true }
