[package]
name = "entity"
version = "0.4.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono   = { workspace = true }
sea-orm  = { workspace = true }
serde    = { workspace = true }
uuid     = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }
