[package]
name = "entity"
version = "1.0.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono     = { workspace = true }
sea-orm    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }
