[package]
name        = "entity"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[lib]
name = "entity"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono     = { workspace = true }
num_enum   = { workspace = true }
sea-orm    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }
