# SPDX-FileCopyrightText: 2026 Wavelens GmbH <info@wavelens.io>
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "gradient-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gradient_db"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
gradient-entity    = { workspace = true }
gradient-migration = { workspace = true }
gradient-types     = { workspace = true }
gradient-util      = { workspace = true }
gradient-storage   = { workspace = true }

anyhow            = { workspace = true }
async-trait       = { workspace = true }
bytes             = { workspace = true }
chrono            = { workspace = true }
futures           = { workspace = true }
sea-orm           = { workspace = true }
sea-orm-migration = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tracing           = { workspace = true }
uuid              = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
