# SPDX-FileCopyrightText: 2026 Wavelens GmbH <info@wavelens.io>
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "gradient-flake-lock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gradient_flake_lock"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow            = { workspace = true }
async-trait       = { workspace = true }
base64            = { workspace = true }
chrono            = { workspace = true }
flate2            = { workspace = true }
futures           = { workspace = true }
git2              = { workspace = true }
harmonia-file-nar = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sha2              = { workspace = true }
tar               = { workspace = true }
tempfile          = { workspace = true }
tokio             = { workspace = true, features = ["rt", "macros", "fs"] }
tracing           = { workspace = true }
url               = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
