# SPDX-FileCopyrightText: 2026 Wavelens GmbH <info@wavelens.io>
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "gradient-notify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gradient_notify"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
gradient-types = { workspace = true }

anyhow      = { workspace = true }
async-trait = { workspace = true }
hex         = { workspace = true }
lettre      = { workspace = true }
rand        = { workspace = true }
tokio       = { workspace = true, features = ["fs"] }
tracing     = { workspace = true }
