[package]
name        = "gradient-scheduler"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[lib]
name = "gradient_scheduler"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
gradient-core = { workspace = true }
gradient-ci = { workspace = true }
gradient-exec = { workspace = true }
gradient-sources = { workspace = true }
gradient-db = { workspace = true }
gradient-types = { workspace = true }
gradient-entity = { workspace = true }
gradient-score = { workspace = true }

anyhow     = { workspace = true }
arc-swap   = { workspace = true }
chrono     = { workspace = true }
cron       = "0.12"
futures    = { workspace = true }
reqwest    = { workspace = true }
sea-orm    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["macros", "sync", "time"] }
tracing    = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
gradient-entity = { workspace = true }
tempfile    = { workspace = true }
gradient-test-support = { workspace = true }
tokio       = { workspace = true, features = ["macros", "sync", "time", "rt-multi-thread"] }
wiremock    = { workspace = true }
