# SPDX-FileCopyrightText: 2026 Wavelens GmbH <info@wavelens.io>
#
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "gradient-score"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
gradient-core = { workspace = true }
gradient-types = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
