# SPDX-FileCopyrightText: 2026 Wavelens GmbH <info@wavelens.io>
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "gradient-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gradient_storage"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
gradient-types = { workspace = true }
gradient-util  = { workspace = true }

anyhow                         = { workspace = true }
async-trait                    = { workspace = true }
bytes                          = { workspace = true }
futures                        = { workspace = true }
harmonia-file-nar              = { workspace = true }
harmonia-store-content-address = { workspace = true }
harmonia-store-path            = { workspace = true }
harmonia-utils-hash            = { workspace = true }
hex                            = { workspace = true }
object_store                   = { workspace = true }
rand                           = { workspace = true }
reqwest                        = { workspace = true }
tempfile                       = { workspace = true }
thiserror                      = { workspace = true }
tokio                          = { workspace = true, features = ["fs", "io-util", "macros", "rt", "sync"] }
tracing                        = { workspace = true }
uuid                           = { workspace = true }
zstd                           = { workspace = true }

async-compression = { version = "0.4", default-features = false, features = ["tokio", "zstd"] }
lettre            = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
tar               = { version = "0.4", default-features = false }
