[package]
name        = "gradient-test-support"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[lib]
name = "gradient_test_support"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
gradient-core       = { workspace = true }
gradient-ci = { workspace = true }
gradient-exec = { workspace = true }
gradient-sources = { workspace = true }
gradient-forge = { workspace = true }
gradient-nix = { workspace = true }
gradient-db = { workspace = true }
gradient-storage = { workspace = true }
gradient-util = { workspace = true }
gradient-types = { workspace = true }
gradient-entity = { workspace = true }
gradient-proto = { workspace = true }
gradient-web = { workspace = true }

anyhow              = { workspace = true }
async-trait         = { workspace = true }
bytes               = { workspace = true }
chrono              = { workspace = true }
futures             = { workspace = true }
harmonia-file-nar         = { workspace = true }
harmonia-store-derivation = { workspace = true }
password-auth       = { workspace = true }
rkyv                = { workspace = true }
sea-orm             = { workspace = true }
serde               = { workspace = true }
tempfile            = { workspace = true }
tokio               = { workspace = true, features = ["macros", "sync"] }
tokio-tungstenite   = { workspace = true }
uuid                = { workspace = true }
zstd                = { workspace = true }

axum-test    = { version = "20.0", default-features = false }
jsonwebtoken = { version = "10.3", default-features = false, features = ["aws_lc_rs"] }
