# SPDX-FileCopyrightText: 2026 Wavelens GmbH <info@wavelens.io>
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "gradient-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gradient_types"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
gradient-entity = { workspace = true }
anyhow     = { workspace = true }
base64     = { workspace = true }
chrono     = { workspace = true }
clap       = { workspace = true }
hex        = { workspace = true }
ipnet      = { workspace = true }
libc       = { workspace = true }
num_enum   = { workspace = true }
rkyv       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["sync"] }
tracing    = { workspace = true }
uuid       = { workspace = true }

cron       = { version = "0.12" }
