[package]
name        = "gradient-web"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[lib]
name = "gradient_web"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
gradient-core = { workspace = true }
gradient-forge = { workspace = true }
gradient-nix = { workspace = true }
gradient-db = { workspace = true }
gradient-storage = { workspace = true }
gradient-util = { workspace = true }
gradient-types = { workspace = true }
gradient-proto = { workspace = true }
gradient-scheduler = { workspace = true }
gradient-cache = { workspace = true }
gradient-entity = { workspace = true }

anyhow        = { workspace = true }
async-stream  = { workspace = true }
futures       = { workspace = true }
base64        = { workspace = true }
blake3        = { workspace = true }
bytes         = { workspace = true }
chrono        = { workspace = true }
git-url-parse = { workspace = true }
hex           = { workspace = true }
password-auth = { workspace = true }
prometheus    = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
rand          = { workspace = true }
reqwest       = { workspace = true, features = ["multipart"] }
sea-orm       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
subtle        = { workspace = true }
tempfile      = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["process", "signal", "macros"] }
tokio-util    = { workspace = true, features = ["io"] }
tracing       = { workspace = true }
url           = { workspace = true }
uuid          = { workspace = true }
zstd          = { workspace = true }

axum                 = { version = "0.8", default-features = false, features = ["multipart", "http1", "json", "tokio", "matched-path", "query", "form", "original-uri"] }
axum_typed_multipart = { version = "0.16", default-features = false, features = ["tempfile_3"] }
axum-streams         = { version = "0.25", default-features = false, features = ["json"] }
email_address        = { version = "0.2", default-features = false }
governor             = { version = "0.10", default-features = false, features = ["std"] }
http                 = { version = "1.4", default-features = false }
http-body-util       = { version = "0.1", default-features = false }
ipnet                = { workspace = true }
jsonwebtoken         = { version = "10.3", default-features = false, features = ["aws_lc_rs"] }
mime_guess           = { workspace = true }
tower                = { version = "0.5", default-features = false }
tower-http           = { version = "0.6", default-features = false, features = ["cors", "request-id", "trace"] }
tower_governor       = { version = "0.8", default-features = false, features = ["axum"] }
harmonia-file-nar = { workspace = true }

[dev-dependencies]
axum-test         = { version = "20.0", default-features = false }
harmonia-file-nar = { workspace = true, features = ["test"] }
hmac              = { workspace = true }
gradient-test-support = { workspace = true }
tokio-test   = { workspace = true }
tower        = { version = "0.5", default-features = false }
zstd         = { workspace = true }
