[package]
name        = "gradient-web"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[lib]
name = "gradient_web"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
gradient-core = { workspace = true }
gradient-state = { workspace = true }
gradient-ci = { workspace = true }
gradient-sources = { workspace = true }
gradient-forge = { workspace = true }
gradient-nix = { workspace = true }
gradient-db = { workspace = true }
gradient-storage = { workspace = true }
gradient-util = { workspace = true }
gradient-types = { workspace = true }
gradient-proto = { workspace = true }
gradient-scheduler = { workspace = true }
gradient-cache = { workspace = true }
gradient-entity = { workspace = true }

anyhow        = { workspace = true }
async-stream  = { workspace = true }
futures       = { workspace = true }
base64        = { workspace = true }
blake3        = { workspace = true }
bytes         = { workspace = true }
chrono        = { workspace = true }
git-url-parse = { workspace = true }
hex           = { workspace = true }
password-auth = { workspace = true }
prometheus    = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
rand          = { workspace = true }
reqwest       = { workspace = true, features = ["multipart"] }
sea-orm       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
subtle        = { workspace = true }
tempfile      = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["process", "signal", "macros"] }
tokio-util    = { workspace = true, features = ["io"] }
tracing       = { workspace = true }
url           = { workspace = true }
uuid          = { workspace = true }
zstd          = { workspace = true }

axum                 = { workspace = true, features = ["multipart", "http1", "json", "tokio", "matched-path", "query", "form", "original-uri"] }
axum_typed_multipart = { workspace = true }
axum-streams         = { workspace = true }
email_address        = { workspace = true }
governor             = { workspace = true }
http                 = { workspace = true }
http-body-util       = { workspace = true }
ipnet                = { workspace = true }
jsonwebtoken         = { workspace = true }
mime_guess           = { workspace = true }
tower                = { workspace = true }
tower-http           = { workspace = true }
tower_governor       = { workspace = true }
harmonia-file-nar = { workspace = true }

[dev-dependencies]
axum-test         = { workspace = true }
harmonia-file-nar = { workspace = true, features = ["test"] }
hmac              = { workspace = true }
gradient-test-support = { workspace = true }
tokio-test   = { workspace = true }
tower        = { workspace = true }
zstd         = { workspace = true }
