# SPDX-FileCopyrightText: 2026 Wavelens GmbH <info@wavelens.io>
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name        = "gradient-worker"
description = "Gradient build worker - connects to a Gradient server via /proto and executes jobs locally"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[[bin]]
name = "gradient-worker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
gradient-core = { workspace = true }
gradient-exec = { workspace = true }
gradient-sources = { workspace = true }
gradient-nix = { workspace = true }
gradient-db = { workspace = true }
gradient-util = { workspace = true }
gradient-types = { workspace = true }
gradient-entity = { workspace = true }
gradient-proto = { workspace = true }
gradient-storage = { workspace = true }

anyhow                = { workspace = true }
async-trait           = { workspace = true }
base64                = { workspace = true }
bytes                 = { workspace = true }
bzip2                 = { workspace = true }
clap                  = { workspace = true }
futures               = { workspace = true }
git2                  = { workspace = true }
harmonia-file-nar              = { workspace = true }
harmonia-protocol              = { workspace = true }
harmonia-store-content-address = { workspace = true }
harmonia-store-derivation      = { workspace = true }
harmonia-store-path            = { workspace = true }
harmonia-store-remote          = { workspace = true }
harmonia-utils-hash            = { workspace = true }
harmonia-utils-signature       = { workspace = true }
hex                   = { workspace = true }
libc                  = { workspace = true }
nix-bindings          = { workspace = true }
reqwest               = { workspace = true }
rkyv                  = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
sha2                  = { workspace = true }
sysinfo               = { workspace = true }
tempfile              = { workspace = true }
tokio                 = { workspace = true, features = ["macros", "process", "fs", "io-util", "signal"] }
tokio-tungstenite     = { workspace = true }
tokio-util            = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
uuid                  = { workspace = true }
xz2                   = { workspace = true }
zstd                  = { workspace = true }

[dev-dependencies]
gradient-test-support = { workspace = true }
