[package]
name = "migration"
version = "1.0.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std        = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { workspace = true }
