[package]
name        = "migration"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
publish     = false

[lib]
name = "migration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait       = { workspace = true }
sea-orm-migration = { workspace = true }
sha2              = { workspace = true }
uuid              = { workspace = true }

async-std = { version = "1", features = ["attributes", "tokio1"] }
