# SPDX-FileCopyrightText: 2023 embr <git@liclac.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "nix-daemon"
version = "0.1.4"
edition = "2024"
license = "EUPL-1.2"
authors = ["embr <git@liclac.eu>", "Wavelens UG <info@wavelens.io>"]
description = "A library for talking directly to the Nix Daemon"
repository = "https://codeberg.org/gorgon/gorgon/src/branch/main/nix-daemon"
documentation = "https://docs.rs/nix-daemon/"
keywords = ["nix"]
categories = ["api-bindings"]

[dependencies]
async-stream = "0.3"
chrono = "0.4"
futures = "0.3"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.15"
strum = { version = "0.27", features = ["derive"] }
tap = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = [
    "rt",
    "macros",
    "parking_lot",
    "io-util",
    "net",
] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = "0.1"

[dev-dependencies]
rand = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
