# SPDX-FileCopyrightText: 2023 embr <git@liclac.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "nix-daemon"
version = "0.1.4"
edition = "2024"
license = "EUPL-1.2"
authors = ["embr <git@liclac.eu>", "Wavelens GmbH <info@wavelens.io>"]
description = "A library for talking directly to the Nix Daemon"
repository = "https://codeberg.org/gorgon/gorgon/src/branch/main/nix-daemon"
documentation = "https://docs.rs/nix-daemon/"
keywords = ["nix"]
categories = ["api-bindings"]

[dependencies]
# Workspace dependencies
async-stream = { workspace = true }
chrono       = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["io-util", "net", "macros"] }
tokio-test   = { workspace = true }
tracing      = { workspace = true }

# Crate-specific dependencies
num_enum     = "0.7"
serde_with   = "3.18"
strum        = { version = "0.28", features = ["derive"] }
tap          = "1.0"
tokio-stream = "0.1"

[dev-dependencies]
rand                = { workspace = true }
tracing-subscriber  = { workspace = true }
