[package]
name = "proto"
version = "1.0.0"
edition = "2024"
publish = false
license = "AGPL-3.0"
authors = ["Wavelens GmbH <info@wavelens.io>"]

[lib]
name = "proto"
path = "src/lib.rs"

[dependencies]
axum          = { version = "0.8", features = ["ws"] }
gradient-core = { path = "../core", package = "core" }
entity        = { workspace = true }
anyhow        = { workspace = true }
chrono        = { workspace = true }
rkyv          = { workspace = true }
sea-orm       = { workspace = true }
tokio         = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing       = { workspace = true }
uuid          = { workspace = true }
